--- a/src/assets/styles/globalStyles.css
+++ b/src/assets/styles/globalStyles.css
@@ -1,3 +1,3 @@
 body {
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "Ubuntu", "Helvetica", "Arial", sans-serif;
 }
